[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
#stm32-metapac = { features = ["stm32l475vg", "memory-x"], git = "https://github.com/embassy-rs/embassy.git", rev = "e7668a86bd118ae8c4eb3e695130d7cac90c1dfe"  }
stm32l4 = { version = "0.14.0", features = ["rt", "stm32l4x5"] }

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
