[package]
name = "blinky-actors"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32l475vg", "time-driver-tim2", "memory-x", "exti"] }
embassy = { version = "0.1.0", default-features = false, features = ["time", "time-tick-32768hz"]  }

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[patch.crates-io]

embassy = {git = "https://github.com/embassy-rs/embassy.git", rev = "0d67ceb066f7b6d3b0163eaa3688b0499439a21c" }
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy.git", rev = "0d67ceb066f7b6d3b0163eaa3688b0499439a21c" }
drogue-device = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "ea193593bebbad16fcdaf6ba08bc3a1a765f30eb" }
