[package]
name = "blinky-actors"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32l475vg", "time-driver-tim2", "memory-x", "exti"] }
embassy = { version = "0.1.0", default-features = false, features = ["time", "time-tick-32768hz"]  }

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
