[package]
name = "blinky-irq"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.7.0", features = ["device"] }
embassy-stm32 = { features = ["stm32l475vg", "memory-x", "unstable-pac"], path = "../../../embassy/embassy-stm32" }
embedded-hal = "0.2.6"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
