[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
]
edition = "2018"
name = "sensor"
version = "0.1.0"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

drogue-device = { version = "0.1.0", default-features = false, features = ["defmt", "time"] }
cortex-m-rt = "0.7.0"
cortex-m = "0.7.1"

embassy = { version = "0.1.0", default-features = false, features=["defmt", "time", "time-tick-32768hz"] }
embassy-stm32 = {version = "0.1.0", default-features = false, features = ["defmt", "time-driver-tim2", "memory-x", "stm32l475vg", "exti" ] }
embedded-hal = { version = "0.2.4", features = ["unproven"] }
